# Caravan

./: CMakeLists.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/julienbrinson/caravan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Clique.cpp  Clique.h  Traveler.cpp  Traveler.h  Trip.cpp  Trip.h  boost-time.cpp  location.cpp  location.h  native-lib.cpp
app/src/main/java/com/example/julienbrinson/caravan/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/julienbrinson/caravan/: ExampleUnitTest.java
cpp/: Traveler.h  Trip.cpp  Trip.h  native-lib.cpp
